--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "ostream": "cpp",
-        "iosfwd": "cpp",
-        "*.tcc": "cpp"
-    },
-    "C_Cpp.default.cppStandard": "c++11"
+        "iosfwd": "cpp"
+    }
 }
